--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
-<a-Duck-Suit v="0.3"
-Contributors="Ducky; Brian"/>
+<Funland v="0.0"
+Contributors="Bob, maca404"/>
 -->
 
 <html>
