--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Contributors="Bob, maca404"/>
   <head>
 
     <meta charset="utf-8">
-    <title>a-Duck-Suit</title>
+    <title>FunLand</title>
     <meta name="a-FunLand" content="Major Fun">  
   </head>
   <body>
