--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ Contributors="Bob, maca404"/>
     <meta charset="utf-8">
     <title>FunLand</title>
     <meta name="a-FunLand" content="Major Fun">  
+    <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/AltspaceVR/aframe-altspace-component/v1.3.1/dist/aframe-altspace-component.min.js"></script>
+    <script src="https://sdk.altvr.com/libs/altspace.js/0.28.1/altspace.min.js"></script>
   </head>
   <body>
 
