--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Contributors="Bob, maca404"/>
      
       <a-entity id="scene" position="0 100 0" rotation="0 0 0">
 
-        <a-obj-model id="Stand" scale="1 1 1" src="#stand-obj" mtl="#stand-mtl" position="0 0 0" rotation="180 0 0" n-mesh-collider="type: environment; convex: true" ></a-obj-model>
+        <a-obj-model id="Stand" color="red" scale="1 1 1" src="#stand-obj" mtl="#stand-mtl" position="0 0 0" rotation="180 0 0" n-mesh-collider="type: environment; convex: true" ></a-obj-model>
       
       </a-entity>
 
