--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@ Contributors="Bob, maca404"/>
       <a-entity id="scene" position="0 -3 0" rotation="0 0 0" scale=".1 .1 .1">
 
         <a-obj-model id="Stand" color="red" scale="0 0 0" src="#stand-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
-        <a-obj-model id="Wheel" color="yellow" scale="0 0 0 " src="#wheel-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" >
-        
-        </a-obj-model>
+        <a-obj-model id="Wheel" color="yellow" scale="0 0 0 " src="#wheel-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
 
       </a-entity>
 
