--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ Contributors="Bob, maca404"/>
         <a-asset-item id="wheel-obj" src="wheel.obj"></a-asset-item>
       </a-assets>      
      
-      <a-entity id="scene" position="0 -3 0" rotation="0 0 0" scale=".1 .1 .1">
+      <a-entity id="scene" position="0 -3 0" rotation="0 0 0">
 
-        <a-obj-model id="Stand" color="red" scale="0 0 0" src="#stand-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
-        <a-obj-model id="Wheel" color="yellow" scale="0 0 0 " src="#wheel-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
+        <a-obj-model id="Stand" color="red" scale="1 1 1" src="#stand-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
+        <a-obj-model id="Wheel" color="yellow" scale="1 1 1" src="#wheel-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
 
       </a-entity>
 
