--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ Contributors="Bob, maca404"/>
 
         <a-obj-model id="Stand" color="red" scale=".1 .1 .1" src="#stand-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
         
-        <a-entity position="0 59.5 0">
-         <a-animation attribute="rotation" dur="10000" repeat="indefinite" from="0 0 0" to="0 0 360"></a-animation>  
-         <a-obj-model id="Wheel" color="yellow" scale=".1 .1 .1" easing="linear" src="#wheel-obj" position="0 -59.5 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
+        <a-entity position="0 63 0">
+         <a-animation attribute="rotation" dur="10000" easing="linear" repeat="indefinite" from="0 0 0" to="0 0 360"></a-animation>  
+         <a-obj-model id="Wheel" color="yellow" scale=".1 .1 .1"  src="#wheel-obj" position="0 -63 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
         </a-entity>
 
 
