--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ Contributors="Bob, maca404"/>
 
         <a-asset-item id="stand-obj" src="stand.obj"></a-asset-item>
         <a-asset-item id="wheel-obj" src="wheel.obj"></a-asset-item>
+        <a-asset-item id="basket-obj" src="basket.obj"></a-asset-item>
+
       </a-assets>      
      
       <a-entity id="scene" position="0 -3 0" rotation="0 0 0">
@@ -34,6 +36,7 @@ Contributors="Bob, maca404"/>
         
         <a-entity position="0 63 0">
          <a-animation attribute="rotation" dur="10000" easing="linear" repeat="indefinite" from="0 0 0" to="0 0 360"></a-animation>  
+         <a-obj-model id="Basket" color="black" scale=".1 .1 .1"  src="#basket-obj" position="0 -63 0" rotation="0 0 0" n-mesh-collider="type: environment; convex: true" ></a-obj-model>
          <a-obj-model id="Wheel" color="yellow" scale=".1 .1 .1"  src="#wheel-obj" position="0 -63 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
         </a-entity>
 
