--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Contributors="Bob, maca404"/>
         <a-obj-model id="Stand" color="red" scale=".1 .1 .1" src="#stand-obj" position="0 0 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: true" ></a-obj-model>
         
         <a-entity position="0 63 0">
-         <a-animation attribute="rotation" dur="30000" easing="linear" repeat="indefinite" from="0 0 0" to="0 0 360"></a-animation>  
+         <!--a-animation attribute="rotation" dur="30000" easing="linear" repeat="indefinite" from="0 0 0" to="0 0 360"></a-animation-->  
           
           <a-entity position="0 6 0">
             <a-obj-model id="Basket" color="black" scale=".1 .1 .1"  src="#basket-obj" position="0 -69 0" rotation="0 0 0" n-mesh-collider="type: environment; convex: false" >
