--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Contributors="Bob, maca404"/>
             <a-obj-model id="Basket" color="pink" scale=".1 .1 .1"  src="#basket-obj" position="0 -12 0" rotation="0 0 0" n-mesh-collider="type: environment; convex: false" ></a-obj-model>
           </a-entity>
          
-         <a-obj-model id="Wheel" color="yellow" scale=".1 .1 .1"  src="#wheel-obj" position="0 -63 0" rotation="0 0 0" n-mesh-collider="type: environment; convex: false" ></a-obj-model>
+         <a-obj-model id="Wheel" color="yellow" scale=".1 .1 .1"  src="#wheel-obj" position="0 -63 0" rotation="0 0 0" n-mesh-collider="type: hologram; convex: false" ></a-obj-model>
         </a-entity>
 
 
