--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Contributors="Maca404; Brian"/>
     <meta name="a-Duck-Suit" content="Duck Suit">  
     <script src="https://aframe.io/releases/0.3.0/aframe.js"></script>
     <script src="https://cdn.rawgit.com/AltspaceVR/aframe-altspace-component/v1.4.0/dist/aframe-altspace-component.min.js"></script>
-    <script src="https://rawgit.com/AltspaceVR/AltspaceSDK/master/dist/altspace.js"></script>
+    <script src="https://sdk.altvr.com/libs/altspace.js/1.0.0/altspace.min.js"></script>>
     <script>
       AFRAME.registerComponent('collapse-model', {
         init: function () {
@@ -259,7 +259,7 @@ Contributors="Maca404; Brian"/>
        <a-entity id="moe" position="10 0 -400" sync="own-on: whoa" sync-transform>
           <a-sphere id="moon" material="src: #moon; repeat: 1 1" position="0 0 0" radius="80" segments-width="16" segments-height="16" n-sphere-collider="type: hologram">
           </a-sphere>
-       <a-animation begin="whoa" attribute="rotation" dur="3000" easing="linear" repeat="0" direction="alternate" from="0 0 0" to="0 3600 0"></a-animation>
+          <a-animation begin="whoa" attribute="rotation" dur="3000" easing="linear" repeat="0" direction="alternate" from="0 0 0" to="0 3600 0"></a-animation>
       </a-entity>
 
       
