--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       requestAnimationFrame(render);
       cube.rotation.x += 0.01;
       cube.rotation.y += 0.01;
+      cube.position.z += 2;
       renderer.render(scene);
     }
     
