--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       color: 0x00ff00
     });
     var cube = new THREE.Mesh(geometry, material);
-    cube.position.z = 4;
+    cube.position.y = 2;
     
     scene.add(cube);
     //Update & Rendering
