--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
     var cube = new THREE.Mesh(geometry, material);
     cube.position.y = 3.5;
-    new NativeComponent('n-mesh-collider', config, cube).addTo(scene);
+    new NativeComponent('n-mesh-collider', configTrue, cube).addTo(scene);
     
     //Update & Rendering
     
