--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
     var scene = document.querySelector('a-scene').object3D;
     var updateRate = 500;
 
-        
-    UltimateLoader.load('turtle.obj', function(turtle)
-    {
-      turtle.position.set(1, 1, 1);
-      turtle.scale.set(10, 10, 10);
-      new NativeComponent('n-mesh-collider', configTrue , turtle).addTo(scene);
-    });
-
+    var loader = new altspace.utilities.shims.OBJMTLLoader();
+    loader.load('turtle.obj', 'turtle.mtl', turtle);
+    turtle.position.set(1, 1, 1);
+    turtle.scale.set(10, 10, 10);
+    new NativeComponent('n-mesh-collider', configTrue , turtle).addTo(scene);
+  
 
     //Update & Rendering
     function render() {
